--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -3,12 +3,12 @@
 <head>
     {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/image.css">
-    <script type="text/javascript" src="/static/js/main.js"></script>
-    <script type="text/javascript" src="/static/js/img_params.js"></script>
-    <script type="text/javascript" src="/static/js/image_selection.js"></script>
-    <script type="text/javascript" src="/static/js/rating.js"></script>
-    <script type="text/javascript" src="/static/js/image_color_picker.js"></script>
-    <script type="text/javascript" src="/static/js/study_timer.js"></script>
+    <script type="text/javascript" src="/js/legacy/main.js"></script>
+    <script type="text/javascript" src="/js/legacy/img_params.js"></script>
+    <script type="text/javascript" src="/js/legacy/image_selection.js"></script>
+    <script type="text/javascript" src="/js/legacy/rating.js"></script>
+    <script type="text/javascript" src="/js/legacy/image_color_picker.js"></script>
+    <script type="text/javascript" src="/js/legacy/study_timer.js"></script>
 	<title>Image ({{ image.image_id }})</title>
 </head>
 <body>
