--- a/templates/tpl_video.html
+++ b/templates/tpl_video.html
@@ -4,7 +4,7 @@
     {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/video.css">
-    <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/js/legacy/main.js"></script>
 	<title>Video ({{ image.image_id }})</title>
 </head>
 <body>
