--- a/templates/tpl_view_board.html
+++ b/templates/tpl_view_board.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/board.css">
-    <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/js/legacy/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/js/board_item.js"></script>
     <title>{{ board.title }}</title>
