--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -225,27 +225,41 @@ span #time-current {
 {
     display: flex;
     font-family: "Courier New", monospace;
+    font-size: 14px;
     color: var(--clr-plt-text2);
     width: 150px;
-    height: 25px;
+    height: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
     text-align: right;
     justify-content: right;
     align-items: center;
     border: 2px solid var(--clr-plt-border2);
 }
 
+.pallet-cell.bright-text
+{
+    color: var(--clr-plt-text-bright) !important;
 
+}
 
-.pallet-save-btn
+.pallet-save-btn, .pallet-remove-btn
 {
     display: inline;
     margin: 3px;
     width: 25px;
     height: 25px;
     background-size: cover;
-    /*border: 0;*/
     background-color: var(--clr-plt-save-btn-bg);
+
+}
+.pallet-save-btn
+{
     background-image: var(--url-icon-edit);
+}
+.pallet-remove-btn
+{
+    background-image: var(--url-icon-cross);
 }
 
 #pallet-frame
@@ -256,4 +270,16 @@ span #time-current {
     border: 4px solid var(--clr-plt-frame);
     box-sizing: border-box;
     pointer-events: none;
+}
+
+.popup-row #tags a, .popup-row #tags a:visited, .popup-row #tags a:focus
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+.popup-row #tags a:hover
+{
+    color: inherit;
+    text-decoration: underline;
 }
