--- a/templates/tpl_image_colors.html
+++ b/templates/tpl_image_colors.html
@@ -3,18 +3,14 @@
 <head>
     {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/gallery.css">
-    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/js/mut_attr_observer.js"></script>
-    <script type="text/javascript" src="/static/js/rating.js"></script>
-    <script type="text/javascript" src="/static/js/image_selection.js"></script>
     <title>{{ title }}</title>
 </head>
 <body>
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>Images pallets</h1>
 </div>
-{#{{ panel|default('') }}#}
 {#{{ paging|default('') }}#}
 <div class="gallery">
     {% for image in images %}
@@ -40,93 +36,104 @@
     <button id="rate-dn" class="rate-dn btn-bg-blend" value="-1"></button>
 {#    <button id="tags-show-btn" class="btn-bg-blend">Show tags</button>#}
 {#    <button id="tags-filter-btn" class="btn-bg-blend">Filter tags</button>#}
-{#    <button id="tags-open-btn" class="btn-bg-blend">Edit tags</button>#}
+{#    <button id="tags-edit-btn" class="btn-bg-blend">Edit tags</button>#}
     <button id="toggle-selection-mode-btn" class="btn-bg-blend">Select</button>
 </div>
 
-<script>
-    let rating = null
-    let selection = null
-
-    // 0 - not showing
-    // 1 - showing
-    let showTagsMode = 0
-
-    document.addEventListener('DOMContentLoaded', function()
-    {
-        // reveal on load
-        const thumbs = document.querySelectorAll('.thumb')
-        thumbs.forEach((elem) =>
-        {
-            new MutationAttributeObserver(elem, 'src', (target) =>
-            {
-                target.classList.remove('thumb-hidden')
-            })
-        })
-
-        new ImageLazyLoad('.thumb', false, '300px')
-
-        rating = new RateMultImages('#rate-up', '#rate-dn', 'loading', 'op-success', 'op-fail')
-        rating.updateImageIds = function ()
-        {
-            this.setImageIds(selection.selectedIds)
-        }
-
-        selection = new ImageSelection('toggle-selection-mode-btn', '.gallery', '.thumbnail')
-    }, false)
-
-    // fetch tags button
-    function fetchTags()
-    {
-        showTagsMode = (showTagsMode + 1) % 2
-
-        // hide shown tags
-        if (showTagsMode === 0)
-        {
-            document.querySelectorAll('.tags-list').forEach(elem => elem.textContent = '')
-            document.querySelectorAll('.overlay').forEach(elem => elem.classList.remove('vis-hide'))
-        }
-        // fetch tags
-        else if (showTagsMode === 1) {
-            const idsStr = Array.from(document.querySelectorAll('.thumbnail')).map((tile) => tile.getAttribute('data-id')).join(',')
-            fetch(`/get-image-tags?image-id=${idsStr}`)
-                .then(response => response.json())
-                .then(data => {
-                    if (!data) throw new Error('Network response was not ok')
-                    document.querySelectorAll('.thumbnail').forEach((tile) => {
-                        const id = tile.getAttribute('data-id')
-                        tile.querySelector('.tags-list').textContent = data[id].join(', ')
-                        tile.querySelector('.overlay').classList.remove('vis-hide')
-                    })
-                })
-                .catch(error => {
-                    console.error('There was a problem with the fetch operation:', error)
-                });
-        }
-    }
-
+{#<script>#}
+{#    let rating = null#}
+{#    let selection = null#}
+{##}
+{#    // 0 - not showing#}
+{#    // 1 - showing#}
+{#    let showTagsMode = 0#}
+{##}
+{#    document.addEventListener('DOMContentLoaded', function()#}
+{#    {#}
+{#        // reveal on load#}
+{#        const thumbs = document.querySelectorAll('.thumb')#}
+{#        thumbs.forEach((elem) =>#}
+{#        {#}
+{#            new MutationAttributeObserver(elem, 'src', (target) =>#}
+{#            {#}
+{#                target.classList.remove('thumb-hidden')#}
+{#            })#}
+{#        })#}
+{##}
+{#        new ImageLazyLoad('.thumb', false, '300px')#}
+{##}
+{#        rating = new RateMultImages('#rate-up', '#rate-dn', 'loading', 'op-success', 'op-fail')#}
+{#        rating.updateImageIds = function ()#}
+{#        {#}
+{#            this.setImageIds(selection.selectedIds)#}
+{#        }#}
+{##}
+{#        selection = new ImageSelection('toggle-selection-mode-btn', '.gallery', '.thumbnail')#}
+{#    }, false)#}
+{##}
+{#    // fetch tags button#}
+{#    function fetchTags()#}
+{#    {#}
+{#        showTagsMode = (showTagsMode + 1) % 2#}
+{##}
+{#        // hide shown tags#}
+{#        if (showTagsMode === 0)#}
+{#        {#}
+{#            document.querySelectorAll('.tags-list').forEach(elem => elem.textContent = '')#}
+{#            document.querySelectorAll('.overlay').forEach(elem => elem.classList.remove('vis-hide'))#}
+{#        }#}
+{#        // fetch tags#}
+{#        else if (showTagsMode === 1) {#}
+{#            const idsStr = Array.from(document.querySelectorAll('.thumbnail')).map((tile) => tile.getAttribute('data-id')).join(',')#}
+{#            fetch(`/get-image-tags?image-id=${idsStr}`)#}
+{#                .then(response => response.json())#}
+{#                .then(data => {#}
+{#                    if (!data) throw new Error('Network response was not ok')#}
+{#                    document.querySelectorAll('.thumbnail').forEach((tile) => {#}
+{#                        const id = tile.getAttribute('data-id')#}
+{#                        tile.querySelector('.tags-list').textContent = data[id].join(', ')#}
+{#                        tile.querySelector('.overlay').classList.remove('vis-hide')#}
+{#                    })#}
+{#                })#}
+{#                .catch(error => {#}
+{#                    console.error('There was a problem with the fetch operation:', error)#}
+{#                });#}
+{#        }#}
+{#    }#}
+{##}
     {#document.getElementById('tags-show-btn').addEventListener('click', fetchTags)#}
     {#document.getElementById('tags-open-btn').addEventListener('click', toggleTagsPopupDisplay)#}
     {#document.getElementById('tags-filter-btn').addEventListener('click', toggleTagsFilterDisplay)#}
-
-    document.addEventListener('keydown', function(e)
-    {
-        // select all
-        if (selection.selectionMode && e.code === 'KeyA' && e.shiftKey)
-        {
-            selection.selectAll()
-        }
-        // show/hide tags
+{##}
+{#    document.addEventListener('keydown', function(e)#}
+{#    {#}
+{#        // select all#}
+{#        if (selection.selectionMode && e.code === 'KeyA' && e.shiftKey)#}
+{#        {#}
+{#            selection.selectAll()#}
+{#        }#}
+{#        // show/hide tags#}
         {#else if (e.code === 'KeyW')#}
         {#{#}
         {#    fetchTags()#}
         {#}#}
-        // toggle selection mode
-        else if (e.code === 'KeyS' && !e.shiftKey)
+{#        // toggle selection mode#}
+{#        else if (e.code === 'KeyS' && !e.shiftKey)#}
+{#        {#}
+{#            selection.toggleSelectionMode()#}
+{#        }#}
+{#    });#}
+{#</script>#}
+<script type="importmap">
+    {
+        "imports":
         {
-            selection.toggleSelectionMode()
+            "image_tools/": "/static/js/image_tools/",
+            "api": "/static/js/api.js"
         }
-    });
+    }
+</script>
+<script type="module" src="/static/js/view_folder_palette.js">
 </script>
 </body>
 </html>
