--- a/templates/tpl_view_dupes.html
+++ b/templates/tpl_view_dupes.html
@@ -3,10 +3,10 @@
 <head>
     {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/gallery.css">
-    <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
-    <script type="text/javascript" src="/static/js/mut_attr_observer.js"></script>
-    <script type="text/javascript" src="/static/js/rating.js"></script>
-    <script type="text/javascript" src="/static/js/image_selection.js"></script>
+    <script type="text/javascript" src="/static/js/legacy/image_lazy_load.js"></script>
+    <script type="text/javascript" src="/static/js/legacy/mut_attr_observer.js"></script>
+    <script type="text/javascript" src="/js/legacy/rating.js"></script>
+    <script type="text/javascript" src="/js/legacy/image_selection.js"></script>
     <title>{{ title }}</title>
 </head>
 <body>
