--- a/templates/tpl_widget_boards_all.html
+++ b/templates/tpl_widget_boards_all.html
@@ -8,4 +8,4 @@
     <button id="board-send-btn" data-url="{{ url_for('routes_board.add_images_to_board') }}">Sent to board</button>
     <button id="board-send-close-btn">Close</button>
 </div>
-<script type="text/javascript" src="/static/js/add_to_board.js"></script>
+{#<script type="text/javascript" src="/static/js/add_to_board.js"></script>#}
