--- a/templates/tpl_widget_paging.html
+++ b/templates/tpl_widget_paging.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/static/js/paging.js"></script>
+<script type="text/javascript" src="/static/js/legacy/paging.js"></script>
 <div class="paging">
     <div class="paging-btns">
         <button class="page-btn btn-bg-blend" {{ 'disabled="true"' if start_page == 1 else '' }} value="{{ 1 }}">&lt;&lt;</button>
