refactor: continue to cleanup. Renamed bunch of urls. fixed bulk fetch tags method

--- a/templates/tpl_view_index.html
+++ b/templates/tpl_view_index.html
@@ -8,13 +8,13 @@
 <body>
 <div class="header">
     <h1>Overview</h1>
-    <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">All</a>
+    <a href="/all?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">All</a>
     <a href="/favs?page=1" class="no-decor but-decor-hover">Favourites</a>
     <a href="/latest_study?page=1" class="no-decor but-decor-hover">Last study</a>
     <a href="/tags" class="no-decor but-decor-hover">Tags</a>
     <a href="/tag-sets" class="no-decor but-decor-hover">Sets</a>
     <a href="/path-tags" class="no-decor but-decor-hover">Paths</a>
-    <a href="/image-colors" class="no-decor but-decor-hover">Pallets</a>
+    <a href="/palettes" class="no-decor but-decor-hover">Pallets</a>
     <a href="/boards" class="no-decor but-decor-hover">Boards</a>
 </div>
 <div class="tiles-container">
