--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -84,7 +84,7 @@
     </div>
     <div class="popup-row">
         <ul id="tags">
-            {# <li><a href="/tagged?tags={{ tag.tag }}">{{ tag.tag }}</a></li> #}
+            {# <li><a href="/all?tags={{ tag.tag }}">{{ tag.tag }}</a></li> #}
         </ul>
     </div>
 </div>
