--- a/templates/tpl_view_index.html
+++ b/templates/tpl_view_index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="header">
     <h1>Overview</h1>
-    <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">All</a>
+    <a href="/all?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">All</a>
     <a href="/favs?page=1" class="no-decor but-decor-hover">Favourites</a>
     <a href="/latest_study?page=1" class="no-decor but-decor-hover">Last study</a>
     <a href="/tags" class="no-decor but-decor-hover">Tags</a>
