feat: newly added tags are not reset by fetching and showing all tags

--- a/static/styles/gallery.css
+++ b/static/styles/gallery.css
@@ -75,6 +75,10 @@
     background-color: var(--clr-tile-ov2-bg);
 }
 
+.overlay .recent-tags
+{
+    color: var(--clr-tag-recent);
+}
 
 .pallet-cell
 {
