--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -14,6 +14,8 @@
     --clr-tag-sel-neg: #a85c4d;
     --clr-tagpin-bg: #918d8d;
 
+    --clr-tag-recent: #234123;
+
     --clr-tagset-label: #545151;
 
     --clr-alert-succ-tr: #23F31500;
