--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -14,6 +14,8 @@
     --clr-tag-sel-neg: #a85c4d;
     --clr-tagpin-bg: #918d8d;
 
+    --clr-tag-heighlight: rgba(206, 177, 61, 0.42);
+
     --clr-tag-recent: #234123;
 
     --clr-tagset-label: #545151;
@@ -235,6 +237,11 @@ button
     flex: 1;
     padding: 10px;
     min-width: 150px;
+}
+
+.tag-item .highlight
+{
+    border: 2px solid var(--clr-tag-heighlight);
 }
 
 /*.tag-link {*/
