--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -10,20 +10,8 @@
     <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>{{ title }}</h1>
     <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path_dir|default('') }}</p>
 </div>
-{#{{ panel|default('') }}#}
 {{ paging|default('') }}
 <div class="gallery">
-    {% for image in images %}
-    <div class="thumbnail" data-id="{{ image.image_id }}" data-fn="{{ image.filename }}" data-rt="{{ image.rating }}">
-        <a href="/study-image/{{ image.image_id }}?same-folder=true&time-planned=120&tags=&tag-set=">
-            <img src="" class="thumb thumb-hidden" data-src="/thumb/{{ image.image_id }}.jpg" alt="{{ image.image_id }}">
-            <div class="overlay vis-hide">
-                <span class="recent-tags"></span><span class="tags-list" data-recent=""></span>
-            </div>
-        </a>
-
-    </div>
-    {% endfor %}
 </div>
 {{ paging|default('') }}
 <div style="height: 20px;"></div>
@@ -50,6 +38,14 @@
         </div>
     </a>
 </div>
+
+<script  id="images-default-sort" type="application/json">
+    {"sort": "{{ d_sort|default('imported_at') }}" }
+</script>
+
+<script  id="images-data" type="application/json">
+    {{ images|safe }}
+</script>
 
 <script type="importmap">
     {
