--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -36,6 +36,7 @@
         <div class="overlay vis-hide">
             <span class="recent-tags"></span><span class="tags-list" data-recent=""></span>
         </div>
+        <div class="play vis-hide"></div>
     </a>
 </div>
 
