refactor: left only one local filter button in tag filter popup. filename search merged with netagive tag search

--- a/templates/tpl_widget_tags_filter_panel.html
+++ b/templates/tpl_widget_tags_filter_panel.html
@@ -8,8 +8,7 @@
     <div id="tagList" class="tag-container">
     </div>
     <div id="filter-by-name" class="vis-hide">
-        <input id="search-text" type="text" width="200"/>
-        <button id="apply-search">Filter by file name</button>
+        <input id="search-text" type="text" width="200" placeholder="Some part of file name"/>
     </div>
     <button id="tags-filter-apply" title="When in gallery view, reload the page.">Apply</button>
     <button id="tags-filter-gallery-apply" class="vis-hide" title="Hide all images that have negative tag assigned.">Filter local </button>
