feat: remove the images! server side code. Also template for the yesno popup. Also added page-extra div to folder view

--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -6,6 +6,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
+<div id="page-extra" style="display:none;" data-extra="{{ extra|default('') }}"></div>
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>{{ title }}</h1>
     <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path_dir|default('') }}</p>
