just pushing changed to sync on another machine

--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -86,6 +86,11 @@
         </ul>
     </div>
 </div>
+<div id="drop-target" class="vis-hide">
+    <div id="container">
+    <span>Drop here</span>
+    </div>
+</div>
 
 <!-- Stubs for some components -->
 <div style="display: none">
