--- a/templates/tpl_widget_tags_filter_panel.html
+++ b/templates/tpl_widget_tags_filter_panel.html
@@ -7,6 +7,11 @@
     </div>
     <div id="tagList" class="tag-container">
     </div>
+    <div><span>Sort by:</span>&nbsp;
+        <button id="sort-name" data-dir="1">Filename</button>&nbsp;
+        <button id="sort-import" data-dir="1">Import date</button>&nbsp;
+        <button id="sort-rating" data-dir="1">Rating</button>
+    </div>
     <div id="filter-by-name" class="vis-hide">
         <input id="search-text" type="text" width="200" placeholder="Some part of file name"/>
     </div>
