--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -262,3 +262,53 @@ span #time-current {
     color: inherit;
     text-decoration: underline;
 }
+
+#drop-target
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: calc(30vh);
+    opacity: 0.8;
+    z-index: 199999;
+    background-color: var(--clr-gray3);
+}
+
+#drop-target #container
+{
+    width: 96%;
+    height: 94%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 2%;
+    border: 4px black dashed;
+    border-radius: 20px;
+}
+
+#drop-target span
+{
+    font-size: calc(10vw);
+    font-family: Tahoma, sans-serif;
+}
+
+.fractured-colors
+{
+    position: fixed;
+    /*top:50%;*/
+    /*left:50%;*/
+    width:100%;
+    height: 100%;
+    /*translate: -50% -50%;*/
+    z-index: 299999;
+    border: 2px black;
+}
+
+#fractured-colors-image
+{
+
+    /*width: 100%;*/
+    /*height: 100%;*/
+}
