--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -5,6 +5,24 @@ body {
     overflow: hidden;
 }
 
+/*.g-centered*/
+/*{*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    z-index: var(--z-ref-container);*/
+/*    overflow: hidden;*/
+/*    text-align: center;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    !*justify-content: space-between;*!*/
+/*    flex-direction: column; !* add column flex direction *!*/
+/*}*/
+
 .modal {
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +31,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: var(--z-ref-container);
     overflow: hidden;
     text-align: center;
     align-items: center;
@@ -26,12 +44,21 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    right: 0;
+    bottom: 0;
     filter: blur(8px);
+    z-index: var(--z-main-bg);
+    transition: filter 0.3s ease;
+}
+
+.modal-bg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    object-fit: cover;
     transform: translate(0%, 5%) scale(1.2);
-    z-index: -1;
     transition: filter 0.3s ease;
 }
 
@@ -43,11 +70,11 @@ body {
 .modal-img-container
 {
     flex-basis: 80%;
-    margin: 20px;
+    margin: 10px;
     display: block;
     object-fit: contain;
-    max-width: calc(100% - 40px); /* 20px margin on left and right */
-    max-height: calc(100% - 40px); /* 20px margin on top and bottom */
+    max-width: calc(75vw - 20px); /* 20px margin on left and right */
+    max-height: calc(100vh - 20px); /* 20px margin on top and bottom */
     /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
 }
 
@@ -136,6 +163,11 @@ body {
 .modal-controls select,
 .modal-controls button {
     margin: 3px;
+}
+
+.modal-controls select {
+    min-width: 120px;
+    max-width: calc(10vw);
 }
 
 .modal-controls .space
@@ -271,7 +303,7 @@ span #time-current {
     left: 0;
     bottom: calc(30vh);
     opacity: 0.8;
-    z-index: 199999;
+    z-index: var(--z-drop-target);
     background-color: var(--clr-gray3);
 }
 
@@ -302,7 +334,7 @@ span #time-current {
     width:100%;
     height: 100%;
     /*translate: -50% -50%;*/
-    z-index: 299999;
+    z-index: var(--z-fract);
     border: 2px black;
 }
 
