refactor: magnification now works as a full screen image instead of background-image. Positioning still buggy

--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -13,6 +13,9 @@
     <img src="{{ content_url }}" alt="{# setup #}">
 </div>
 
+<div class="magnification-container vis-hide">
+    <div class="magnification"><img class="magn-img" src =""/></div>
+</div>
 <div class="modal">
     <div class="modal-img-container">
         <div class="anim-container vis-hide">
@@ -26,7 +29,6 @@
             </table>
         </div>
         <img class="modal-img" src="{{ content_url }}" alt="{# setup #}" tabindex="0">
-        <div class="magnification"></div>
     </div>
 
     <div class="modal-controls btn-bg-blend">
