--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -103,6 +103,16 @@ body {
 .modal-img-gray-contrast-300  { filter: grayscale(100%) contrast(3); }
 .modal-img-gray-contrast-1000 { filter: grayscale(100%) contrast(10); }
 
+.magnification-container
+{
+    position: absolute;
+    left: calc(50vw);
+    top: calc(50vh);
+    translate: -50% -50%;
+    width: calc(100vw);
+    height: calc(100vh);
+    z-index: var(--z-ref-img-magnifier);
+}
 .magnification
 {
     pointer-events: none;
@@ -110,11 +120,17 @@ body {
     left: 0;
     top: 0;
     background-repeat: no-repeat;
-    display: none;
     transition: filter 0.2s ease;
+    transform-origin: center;
+}
+.magnification img {
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
-.modal-img, .magnification
+.modal-img, .magnification, .magnification-container
 {
     cursor: var(--cursor-transp);
 }
