--- a/templates/tpl_view_board_all.html
+++ b/templates/tpl_view_board_all.html
@@ -24,7 +24,7 @@
         <div class="board-line" data-id="{{ b.id }}">
             <span>[{{ b.id }}]</span>&nbsp;&nbsp;<span>{{ b.title }}</span>
             <a href="{{ url_for('routes_board.view_board', b_id=b.id) }}" target="_blank"
-               class="no-decor but-decor-hover">Open <img class="dir-link" src="/static/link.png"></a>
+               class="no-decor but-decor-hover">Open <img class="dir-link" src="/static/images/link.png"></a>
         </div>
     {% endfor %}
 </div>
