--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -69,7 +69,7 @@
             <label for="same-folder">Same folder:</label>
             <input type="checkbox" id="same-folder" value="true">
             <input type="hidden" id="min-rating" value="0">
-            <a id="img-folder-link" href="{# setup #}"><img class="dir-link" src="/static/link.png"></a>
+            <a id="img-folder-link" href="{# setup #}"><img class="dir-link" src="/static/images/link.png"></a>
         </div>
         <div class="row">
             <button id="prev" class="btn-bg-blend">&lt;</button>
