--- a/templates/tpl_view_index.html
+++ b/templates/tpl_view_index.html
@@ -24,7 +24,7 @@
         <div class="overlay">
             <a class="a-hidden" href="/folder/{{ img.path_id }}" target="_blank"><h2>[{{ img.study_type }}]</h2></a>
             <a class="a-hidden" href="/folder/{{ img.path_id }}" target="_blank"><p>{{ img.path_dir }}</p></a>
-            <a href="/folder/{{ img.path_id }}" target="_blank">Folder <img class="dir-link" src="/static/link.png"></a>
+            <a href="/folder/{{ img.path_id }}" target="_blank">Folder <img class="dir-link" src="/static/images/link.png"></a>
             <a href="/study-image/{{ img.image_id }}?same-folder=true&time-planned=120" target="_blank">First id:{{ img.image_id }}</a>
         </div>
     </div>
