--- a/templates/tpl_part_header.html
+++ b/templates/tpl_part_header.html
@@ -1,3 +1,3 @@
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
     <link rel="stylesheet" href="/static/styles/global.css">
